k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rsearch
  labels:
    app.kubernetes.io/name: rsearch
    app.kubernetes.io/component: namespace
